--- a/19190859_FYP/app/src/main/res/values/strings.xml
+++ b/19190859_FYP/app/src/main/res/values/strings.xml
@@ -1,4 +1,25 @@
 <resources>
+    <string-array name = "amountOfControl">
+        <item>None</item>
+        <item>Little</item>
+        <item>A normal amount</item>
+        <item>A lot</item>
+        <item>Not Sure</item>
+    </string-array>
+
+    <string-array name = "controlOverTime">
+        <item>Increased</item>
+        <item>Decreased</item>
+        <item>Stayed the Same</item>
+        <item>Not Sure</item>
+    </string-array>
+
+    <string-array name = "wasGameEnjoyed">
+        <item>Yes</item>
+        <item>No</item>
+        <item>Not Sure</item>
+    </string-array>
+
     <string name="app_name">19190859_FYP</string>
     <string name="start_game">Start Game</string>
     <string name="view_data">View Input Data</string>
