continued updates, added new classes and layout for game instructions, added working accelerometer functionality

--- a/19190859_FYP/app/src/main/res/values/strings.xml
+++ b/19190859_FYP/app/src/main/res/values/strings.xml
@@ -32,12 +32,12 @@
     <string name="gameOverText">Game Over</string>
     <string name="scoreDisplay">Score: </string>
     <string name="zeroText">0</string>
-    <string name="l"></string>
-    <string name="m"></string>
-    <string name="n"></string>
-    <string name="o"></string>
-    <string name="p"></string>
-    <string name="q"></string>
+    <string name="questionnaireButtonText">Start Questionnaire</string>
+    <string name="submitAnswersText">Submit Questionnaire</string>
+    <string name="questionnaireInstructionText">Please answer the below questions.</string>
+    <string name="q1Text">Did you enjoy the game?</string>
+    <string name="q2Text">How much control did you feels you had over the game?</string>
+    <string name="q3Text">Did you feel like your control over the game increased or decreased over time?</string>
     <string name="r"></string>
     <string name="s"></string>
     <string name="t"></string>
