added functionality for game rules activity, removed references to view data activity due to lack of need

--- a/19190859_FYP/app/src/main/res/values/strings.xml
+++ b/19190859_FYP/app/src/main/res/values/strings.xml
@@ -38,12 +38,12 @@
     <string name="q1Text">Did you enjoy the game?</string>
     <string name="q2Text">How much control did you feels you had over the game?</string>
     <string name="q3Text">Did you feel like your control over the game increased or decreased over time?</string>
-    <string name="r"></string>
-    <string name="s"></string>
-    <string name="t"></string>
-    <string name="u"></string>
-    <string name="v"></string>
-    <string name="w"></string>
+    <string name="gameRulesButtonText">View the Game Rules</string>
+    <string name="premiseText">Fly the bird around the clouds to score points. You start with 10 life</string>
+    <string name="redRule">Red enemies inflict two damage</string>
+    <string name="blueRule">Blue enemies inflict 1 damage</string>
+    <string name="greenRule">Green enemies heal you by one point</string>
+    <string name="scoreRule">Avoiding clouds and allowing them to fly off screen earns one point per cloud</string>
     <string name="x"></string>
     <string name="y"></string>
     <string name="z"></string>
